k8s/base/traefik-middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ecommerce-redirect-https
  namespace: ecommerce
spec:
  redirectScheme:
    scheme: https
    permanent: true
