k8s/base/file-storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-storage-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: file-storage-service
  template:
    metadata:
      labels:
        app: file-storage-service
    spec:
      containers:
        - name: file-storage
          image: <ECR_REGISTRY>/file-storage-service:latest
          ports:
            - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: file-storage-service
spec:
  selector:
    app: file-storage-service
  ports:
    - port: 8005
      targetPort: 8005
