k8s/base/postgres-headless-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ecommerce
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgresql
