k8s/base/stock-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock
          image: <ECR_REGISTRY>/stock-service:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  selector:
    app: stock-service
  ports:
    - port: 8001
      targetPort: 8001
