k8s/base/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ecommerce-auth-strip@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.ecomaiselleragent.store
      secretName: auth-ecomaiselleragent-store-tls
  rules:
    - host: auth.ecomaiselleragent.store
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
