k8s/base/ingress-notifications.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ecommerce-notifications-strip@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - notifications.ecomaiselleragent.store
      secretName: notifications-ecomaiselleragent-store-tls
  rules:
    - host: notifications.ecomaiselleragent.store
      http:
        paths:
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8004
